--- a/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
+++ b/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
@@ -6,6 +6,12 @@
     <UserSecretsId>dd417278-e3be-4574-96d3-ec2bec654814</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath></OutputPath>
+    <DocumentationFile>Monyk.GroundControl.Main.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
