Setup basic request flow

--- a/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
+++ b/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Monyk.GroundControl.Db\Monyk.GroundControl.Db.csproj" />
     <ProjectReference Include="..\Monyk.GroundControl.Services\Monyk.GroundControl.Services.csproj" />
+    <ProjectReference Include="..\Monyk.Common.Communicator\Monyk.Common.Communicator.csproj" />
   </ItemGroup>
 
 </Project>
