Ensure correct naming

--- a/src/Monyk.GroundControl.Main/Properties/launchSettings.json
+++ b/src/Monyk.GroundControl.Main/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Monyk.Manager": {
+    "Monyk.GroundControl.Main": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
