--- a/src/Monyk.Probe.Checkers/Monyk.Probe.Checkers.csproj
+++ b/src/Monyk.Probe.Checkers/Monyk.Probe.Checkers.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
   </ItemGroup>
 
