--- a/src/Monyk.Probe.Main/Properties/launchSettings.json
+++ b/src/Monyk.Probe.Main/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Monyk.Probe.Main": {
       "commandName": "Project",
       "environmentVariables": {
-        "ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
