--- a/src/Monyk.Common.Communicator/Monyk.Common.Communicator.csproj
+++ b/src/Monyk.Common.Communicator/Monyk.Common.Communicator.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
