--- a/src/Monyk.Lab.Main/Monyk.Lab.Main.csproj
+++ b/src/Monyk.Lab.Main/Monyk.Lab.Main.csproj
@@ -10,11 +10,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.2" />
     <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.6.0" />
+    <PackageReference Include="Refit" Version="4.6.58" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="4.6.58" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Monyk.GroundControl.ApiClient\Monyk.GroundControl.ApiClient.csproj" />
     <ProjectReference Include="..\Monyk.Common.Models\Monyk.Common.Models.csproj" />
     <ProjectReference Include="..\Monyk.Common.Startup\Monyk.Common.Startup.csproj" />
   </ItemGroup>
