--- a/src/Monyk.Lab.Main/appsettings.yml
+++ b/src/Monyk.Lab.Main/appsettings.yml
@@ -9,6 +9,7 @@ Monyk.Common.Communicator:
     UserName: '<env. specific>'
     Password: '<env. specific secret>'
 Monyk.Lab.Main:
+  GroundControlBaseUrl: '<env. specific>'
   ResultProcessors:
     SlackNotifier:
       WebHooks: '<env. specific secrets (list)>'
