--- a/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
+++ b/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
     <ProjectReference Include="..\Monyk.Common.Models\Monyk.Common.Models.csproj" />
   </ItemGroup>
 
