--- a/src/Monyk.GroundControl.Main/appsettings.Development.yml
+++ b/src/Monyk.GroundControl.Main/appsettings.Development.yml
@@ -4,9 +4,11 @@
     System: Information
     Microsoft: Information
 Monyk.GroundControl:
-  Database: sqlite
+  DatabaseType: sqlite
 Monyk.Common.Communicator:
   RabbitMQ:
     Host: vulture.rmq.cloudamqp.com
     VHost: iegvyoic
     UserName: iegvyoic
+ConnectionStrings:
+  MainDb: 'Data Source=monyk.db'
