Add basic Docker Compose orchestration

--- a/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
+++ b/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
@@ -5,6 +5,7 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>dd417278-e3be-4574-96d3-ec2bec654814</UserSecretsId>
     <LangVersion>latest</LangVersion>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
