--- a/src/Monyk.Probe.Main/Monyk.Probe.Main.csproj
+++ b/src/Monyk.Probe.Main/Monyk.Probe.Main.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>latest</LangVersion>
     <UserSecretsId>50b01a61-fc0b-4936-873f-adca2d46efc5</UserSecretsId>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
