--- a/src/Monyk.Lab.Main/appsettings.Development.yml
+++ b/src/Monyk.Lab.Main/appsettings.Development.yml
@@ -4,7 +4,7 @@
     System: Information
     Microsoft: Information
 Monyk.Lab.Main:
-  GroundControlBaseUrl: https://localhost:42011/api/v1
+  GroundControlBaseUrl: http://monyk.groundcontrol.main/api/v1
 Monyk.Common.Communicator:
   RabbitMQ:
     Host: vulture.rmq.cloudamqp.com
