--- a/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
+++ b/src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
+    <ProjectReference Include="..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
     <ProjectReference Include="..\Monyk.Common.Startup\Monyk.Common.Startup.csproj" />
     <ProjectReference Include="..\Monyk.GroundControl.Db\Monyk.GroundControl.Db.csproj" />
     <ProjectReference Include="..\Monyk.GroundControl.Services\Monyk.GroundControl.Services.csproj" />
