--- a/src/Monyk.Probe.Main/appsettings.Development.yml
+++ b/src/Monyk.Probe.Main/appsettings.Development.yml
@@ -5,6 +5,7 @@
     Microsoft: Information
 Monyk.Common.Communicator:
   RabbitMQ:
-    Host: vulture.rmq.cloudamqp.com
-    VHost: iegvyoic
-    UserName: iegvyoic
+    Host: localhost
+    VHost: '/'
+    UserName: guest
+    Password: guest
