--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,6 +6,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ASPNETCORE_HTTPS_PORT=42111
+      - Monyk.Common.Communicator__RabbitMQ__Host=rabbitmq
     ports:
       - "42101:80"
       - "42111:443"
@@ -18,6 +19,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ASPNETCORE_HTTPS_PORT=42112
+      - Monyk.Common.Communicator__RabbitMQ__Host=rabbitmq
     ports:
       - "42102:80"
       - "42112:443"
@@ -30,9 +32,14 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ASPNETCORE_HTTPS_PORT=42113
+      - Monyk.Common.Communicator__RabbitMQ__Host=rabbitmq
     ports:
       - "42103:80"
       - "42113:443"
     volumes:
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+  
+  rabbitmq:
+    ports:
+      - "15672:15672"
