--- a/src/Monyk.GroundControl.Main/appsettings.Development.yml
+++ b/src/Monyk.GroundControl.Main/appsettings.Development.yml
@@ -7,8 +7,9 @@ Monyk.GroundControl:
   DatabaseType: sqlite
 Monyk.Common.Communicator:
   RabbitMQ:
-    Host: vulture.rmq.cloudamqp.com
-    VHost: iegvyoic
-    UserName: iegvyoic
+    Host: localhost
+    VHost: '/'
+    UserName: guest
+    Password: guest
 ConnectionStrings:
   MainDb: 'Data Source=monyk.db'
