--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,7 @@ services:
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ASPNETCORE_HTTPS_PORT=42111
       - Monyk.Common.Communicator__RabbitMQ__Host=rabbitmq
+      - Monyk.GroundControl__DatabaseType=Pgsql
     ports:
       - "42101:80"
       - "42111:443"
