--- a/src/Monyk.Lab.Main/appsettings.Development.yml
+++ b/src/Monyk.Lab.Main/appsettings.Development.yml
@@ -1,13 +1,8 @@
-﻿Logging:
-  LogLevel:
-    Default: Debug
-    System: Information
-    Microsoft: Information
-Monyk.Lab.Main:
-  GroundControlBaseUrl: http://monyk.groundcontrol.main/api/v1
-Monyk.Common.Communicator:
+﻿Communicator:
   RabbitMQ:
     Host: localhost
-    VHost: '/'
+    VHost: /
     UserName: guest
     Password: guest
+Lab:
+  GroundControlBaseUrl: http://localhost:42003/api/v1
