--- a/src/Monyk.Probe.Main/appsettings.yml
+++ b/src/Monyk.Probe.Main/appsettings.yml
@@ -1,10 +1,6 @@
-﻿Logging:
-  LogLevel:
-    Default: Warning
-AllowedHosts: "*"
-Monyk.Common.Communicator:
+﻿Communicator:
   RabbitMQ:
-    Host: '<env. specific>'
-    VHost: '<env. specific>'
-    UserName: '<env. specific>'
-    Password: '<env. specific secret>'
+    Host: <required>
+    VHost: <required>
+    UserName: <required>
+    Password: <required>
