--- a/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
+++ b/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
@@ -6,12 +6,12 @@
   <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
+    <ProjectReference Include="..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
+    <ProjectReference Include="..\Monyk.GroundControl.Services\Monyk.GroundControl.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Monyk.GroundControl.Db\Monyk.GroundControl.Db.csproj" />
-    <ProjectReference Include="..\Monyk.Common.Communicator\Monyk.Common.Communicator.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2" />
   </ItemGroup>
 
 </Project>
