--- a/src/Monyk.GroundControl.ApiClient/Monyk.GroundControl.ApiClient.csproj
+++ b/src/Monyk.GroundControl.ApiClient/Monyk.GroundControl.ApiClient.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+  <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Refit" Version="4.6.58" />
