--- a/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
+++ b/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
@@ -1,8 +1,9 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-  </PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+  <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
