--- a/src/Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj
+++ b/src/Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj
@@ -1,8 +1,9 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+  <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
