--- a/test/Monyk.Probe.Checkers.Tests/Monyk.Probe.Checkers.Tests.csproj
+++ b/test/Monyk.Probe.Checkers.Tests/Monyk.Probe.Checkers.Tests.csproj
@@ -1,10 +1,11 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
-  </PropertyGroup>
+  <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
