Enable advanced logging

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -50,3 +50,9 @@ services:
   postgres:
     environment:
       POSTGRES_PASSWORD: postgres
+  
+  seq:
+    volumes:
+      - "${APPDATA}/seq/data:/data"
+    ports:
+      - "5341:80"
