--- a/src/Monyk.Lab.Main/appsettings.yml
+++ b/src/Monyk.Lab.Main/appsettings.yml
@@ -1,4 +1,7 @@
-﻿Communicator:
+﻿Seq:
+  ServerUrl: http://seq:5341
+  
+Communicator:
   RabbitMQ:
     Host: <required>
     VHost: <required>
@@ -9,4 +12,3 @@ Lab:
   ResultProcessors:
     SlackNotifier:
       WebHooks: <env. specific secrets (list)>
-        
