--- a/src/Monyk.GroundControl.Main/appsettings.Development.yml
+++ b/src/Monyk.GroundControl.Main/appsettings.Development.yml
@@ -7,4 +7,4 @@
 GroundControl:
   Database:
     Type: sqlite
-    ConnectionString: Data Source=monyk.db
+    ConnectionString: Data Source=GroundControl.db
