--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${DOCKER_REGISTRY-}monykgroundcontrolmain
     build:
       context: .
-      dockerfile: src/Monyk.GroundControl.Main/Dockerfile
+      dockerfile: Monyk.GroundControl.Main/Dockerfile
     depends_on:
       - rabbitmq
       - postgres
@@ -14,7 +14,7 @@ services:
     image: ${DOCKER_REGISTRY-}monykprobemain
     build:
       context: .
-      dockerfile: src/Monyk.Probe.Main/Dockerfile
+      dockerfile: Monyk.Probe.Main/Dockerfile
     depends_on:
       - rabbitmq
 
@@ -22,7 +22,7 @@ services:
     image: ${DOCKER_REGISTRY-}monyklabmain
     build:
       context: .
-      dockerfile: src/Monyk.Lab.Main/Dockerfile
+      dockerfile: Monyk.Lab.Main/Dockerfile
     depends_on:
       - rabbitmq
 
