--- a/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
+++ b/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.2" />
   </ItemGroup>
 
