--- a/src/Monyk.GroundControl.ApiClient/Monyk.GroundControl.ApiClient.csproj
+++ b/src/Monyk.GroundControl.ApiClient/Monyk.GroundControl.ApiClient.csproj
@@ -6,6 +6,7 @@
   <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
     <PackageReference Include="Refit" Version="4.6.99" />
   </ItemGroup>
 
