--- a/src/Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj
+++ b/src/Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj
@@ -6,6 +6,7 @@
   <LangVersion>latest</LangVersion></PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
