--- a/src/Monyk.Lab.Main/appsettings.yml
+++ b/src/Monyk.Lab.Main/appsettings.yml
@@ -4,7 +4,7 @@
 Communicator:
   RabbitMQ:
     Host: <required>
-    VHost: <required>
+    VHost: /
     UserName: <required>
     Password: <required>
 Lab:
